[package]
name = "gpu"
version = "0.1.0"
authors = ["David Harvey-Macaulay <alteous@outlook.com>"]

[dependencies]
arrayvec = "*"
crossbeam-channel = "0.1"
glutin = "0.12"
log = "0.4"
vec_map = "*"

[dev-dependencies]
env_logger = "0.4"
image = "*"

[build-dependencies]
gl_generator = "0.5"

[features]
default = ["macros"]
macros = []